--- a/index.html
+++ b/index.html
@@ -10,33 +10,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<nav class="navbar navbar-default navbar-fixed-top nav-me clearfix" role="navigation">
+<nav class="navbar navbar-inverse" role="navigation">
     <div class="container">
-        <div class="container-fluid">
-        <div class="navbar-header nav-head-me">
-            <a class="navbar-brand color-link" href="#">Start Bootstrap</a>
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Start Bootstrap</a>
         </div>
-        <div class="collapse navbar-collapse">
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a class="color-link" href="#">About</a></li>
-                <li><a class="color-link" href="#">Services</a></li>
-                <li><a class="color-link" href="#">Contact</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
-        </div>
-    </div>
-    </div>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
 </nav>
 <div class="container">
     <div class="container-fluid content-me">
     <div class="row">
         <div class="col-md-3">
             <p class="title-me">Shop Name</p>
-            <ul class="list-group">
-                <li class="list-group-item"><a class="list-link" href="#">Category 1</a></li>
-                <li class="list-group-item"><a class="list-link" href="#">Category 2</a> </li>
-                <li class="list-group-item"><a class="list-link" href="#">Category 3</a> </li>
-            </ul>
-            <div class="list-group">
+               <div class="list-group">
                 <a class="list-group-item" href="#">Category 1</a>
                 <a class="list-group-item" href="#">Category 2</a>
                 <a class="list-group-item" href="#">Category 3</a>
